<resources>
    <string name="app_name">Marche</string>
    <string name="inicio">Inicio de sesion</string>
    <string name="registro">Registrar usuario</string>
    <string name="correo">Correo electronico</string>
    <string name="contrsena">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Telefono</string>
    <string name="resgistrar">Registrar</string>
    <string name="regreso">Ya tengo cuenta</string>
    <string name="salir">salir</string>
    <string name="hola">hola</string>
    <string name="olvidaste">Olvidaste tu contraseña</string>
    <string name="texto_instrucciones">Marche es una plataforma para la comercializacion de productos saludables ...</string>
    <string name="texto_instrucciones_2">Desde aqui, encontraras la mejor opcion de productos 100% naturales ...</string>
    <string name="texto_instrucciones_3">Desde la ciudad hasta tu mesa ...</string>
    <string name="texto_instrucciones_4">Esta plataforma te pone en contacto con vecinos que producen alimentos de muy buena calidad ...</string>
    <string name="title_activity_instrucciones">InstruccionesActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="tab_text_4">Tab 4</string>
    <string name="agregar">Escoje una categoria</string>
    <string name="namedeproduct">Nombre del producto</string>
    <string name="description">Detalles de produccion</string>
    <string name="pricedp">Precio del producto</string>
    <string name="priced">Precio</string>
    <string name="agregarProducto">Agregar alimento</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Nombre de usuario</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Mis publicaciones</string>
    <string name="menu_slideshow">Configuracion</string>
    <string name="menu_tools">Salir</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Close">Cerrar</string>
    <string name="Cambiar_foto">Cambiar foto de perfil</string>
    <string name="Update">Actualizar</string>
    <string name="Enviar_mensaje">Enviar mensaje</string>
    <string name="Llamar">Llamar</string>
    <string name="ver_perfil">Perfil</string>
    <string name="Desde">Desde</string>
    <string name="Contactar">Contactar al productor</string>
    <string name="mi_alimento">Estoy comiendo sano con Marche</string>
    <string name="escribe_mensaje">Escribe el mensaje aqui</string>
    <string name="perfil">Perfil</string>
    <string name="coment">Comentarios:</string>
    <string name="coment_en">Comentado en</string>
    <string name="mensajes_in">Mensajes</string>
    <string name="esxribe_coment">Escribe un comentario aqui...</string>
    <string name="ultimo_mensaje">Ultimo mensaje</string>
    <string name="Configuracion">Configuracion</string>
    <string name="Informacion">Informacion</string>
    <string name="Editar_producto">Realizar cambios</string>
</resources>
