<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home"
            android:iconTint="@android:color/white"/>
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/category"
            android:title="@string/menu_gallery"
            android:subtitle="Publicaciones echas"
            android:iconTint="@android:color/white"/>
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/baseline_account_circle_black_18dp"
            android:title="@string/perfil"
            android:subtitle="Mi perfil"
            android:iconTint="@android:color/white"/>
        <item
            android:id="@+id/nav_mensajes"
            android:icon="@drawable/ic_message_black_24dp"
            app:actionLayout="@layout/menu_item_layout"
            android:title="@string/mensajes_in"
            android:subtitle="Mensajes recibidos"
            android:iconTint="@android:color/white"/>

    </group>
    <item android:title="@string/Configuracion">
        <menu>
            <item
                android:id="@+id/nav_informacion"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/Informacion"
                android:subtitle="Acerca de la aplicacion"
                android:iconTint="@android:color/white"/>
            <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_slideshow"
                android:subtitle="Realizar ajustes de perfil"
                android:iconTint="@android:color/white"/>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/logout"
                android:subtitle="Cerrar sesion"
                android:title="@string/menu_tools"
                android:iconTint="@android:color/white"/>


        </menu>

    </item>


</menu>
