<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addnewcategoryActivity">

    <include
        android:id="@id/toolbar"
        layout="@layout/app_bar_layout"/>

    <ImageView
        android:layout_below="@+id/toolbar"
        android:id="@+id/select_product_image"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:src="@drawable/ala"
        android:cropToPadding="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>


    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_product_image"
        android:inputType="textMultiLine"
        android:layout_marginTop="45dp"
        android:padding="15dp"
        android:hint="@string/namedeproduct"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/sha"/>

    <EditText
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_name"
        android:inputType="textMultiLine"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:hint="@string/description"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/sha"/>

    <EditText
        android:id="@+id/product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_description"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/sha"
        android:hint="@string/pricedp"
        android:inputType="textMultiLine"
        android:padding="15dp"
        android:phoneNumber="true" />


    <Button
        android:id="@+id/add_new_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_price"
        android:text="@string/agregarProducto"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:padding="17dp"
        android:layout_marginTop="50dp"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:background="@drawable/bt_2"/>

</RelativeLayout>