<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/f"
        android:scaleType="centerCrop"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#d8000000"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginBottom="70dp"
                android:src="@drawable/logo_grande" />

            <EditText
                android:id="@+id/txt_nnombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/input"
                android:hint="@string/nombre"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:textColor="#ffffff"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:textColorHint="#ccc" />

            <EditText
                android:id="@+id/txt_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/input"
                android:hint="@string/telefono"
                android:textColor="#ffffff"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:phoneNumber="true"
                android:textColorHint="#ccc" />

            <EditText
                android:id="@+id/txt_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/input"
                android:hint="@string/correo"
                android:textColor="#ffffff"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:textColorHint="#ccc" />

            <EditText

                android:id="@+id/txt_contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/input"
                android:hint="@string/contrsena"
                android:textColor="#ffffff"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:textColorHint="#ccc" />

            <Button
                android:id="@+id/bt2_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bt_redondeado"
                android:elevation="5dp"
                android:text="@string/resgistrar"
                android:textColor="#403f3f"
                android:textSize="16dp" />

            <Button
                android:id="@+id/bt2_regreso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bt_redondeado"
                android:elevation="5dp"
                android:text="@string/regreso"
                android:textColor="#403f3f"
                android:textSize="16dp"/>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>