<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="20dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    app:cardElevation="15dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="7dp"
            android:background="@drawable/bt_redondeado">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/comment_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/simple_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coment_en"
                    android:textColor="@color/colorGris"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/comment_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Desde"
                    android:textSize="12sp"
                    android:textStyle="bold"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/comment_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coment"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/comment_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Desde"
                    android:textAlignment="viewEnd"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


</androidx.cardview.widget.CardView>