<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="20dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/namedeproduct"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:autoLink="all"/>
        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="4dp"
            android:layout_below="@+id/product_name"
            android:scaleType="center"
            android:layout_marginTop="2dp"
            />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_image"
            android:text="@string/priced"
            android:textAlignment="center"
            android:textSize="18dp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_price"
            android:text="@string/description"
            android:layout_marginTop="2dp"
            android:textAlignment="center"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:autoLink="all"/>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/moreBoton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_more_black_dos"
        android:layout_gravity="right"
        android:layout_marginRight="5dp"/>

</androidx.cardview.widget.CardView>